Source/WebCore/accessibility/AccessibilityARIAGrid.cpp
@@ -81,7 +81,23 @@ bool AccessibilityARIAGrid::addTableCellChild(AccessibilityObject* child, HashSe
     appendedRows.add(row);
     return true;
 }
-    
+
+void AccessibilityARIAGrid::addRowDescendant(AccessibilityObject* rowChild, HashSet<AccessibilityObject*>& appendedRows, unsigned& columnCount)
+{
+    if (!rowChild)
+        return;
+
+    if (!rowChild->isTableRow()) {
+        // Although a "grid" should have rows as its direct descendants, if this is not a table row,
+        // dive deeper into the descendants to try to find a valid row.
+        AccessibilityChildrenVector children = rowChild->children();
+        size_t length = children.size();
+        for (size_t i = 0; i < length; ++i)
+            addRowDescendant(children[i].get(), appendedRows, columnCount);
+    } else
+        addTableCellChild(rowChild, appendedRows, columnCount);
+}
+
 void AccessibilityARIAGrid::addChildren()
 {
     ASSERT(!m_haveChildren); 
@@ -100,22 +116,8 @@ void AccessibilityARIAGrid::addChildren()
     // add only rows that are labeled as aria rows
     HashSet<AccessibilityObject*> appendedRows;
     unsigned columnCount = 0;
-    for (RefPtr<AccessibilityObject> child = firstChild(); child; child = child->nextSibling()) {
-
-        if (!addTableCellChild(child.get(), appendedRows, columnCount)) {
-            
-            // in case the render tree doesn't match the expected ARIA hierarchy, look at the children
-            if (!child->hasChildren())
-                child->addChildren();
-
-            // The children of this non-row will contain all non-ignored elements (recursing to find them). 
-            // This allows the table to dive arbitrarily deep to find the rows.
-            AccessibilityChildrenVector children = child->children();
-            size_t length = children.size();
-            for (size_t i = 0; i < length; ++i)
-                addTableCellChild(children[i].get(), appendedRows, columnCount);
-        }
-    }
+    for (RefPtr<AccessibilityObject> child = firstChild(); child; child = child->nextSibling())
+        addRowDescendant(child.get(), appendedRows, columnCount);
     
     // make the columns based on the number of columns in the first body
     for (unsigned i = 0; i < columnCount; ++i) {
