Source/WebCore/accessibility/AccessibilityARIAGridRow.h
@@ -48,6 +48,7 @@ public:
     
 private:
     virtual bool isARIATreeGridRow() const;
+    virtual AccessibilityObject* parentTable() const;
 }; 
     
 } // namespace WebCore 
