Source/WebCore/accessibility/AccessibilityObject.h
@@ -413,6 +413,7 @@ public:
     virtual bool isInputSlider() const { return false; }
     virtual bool isControl() const { return false; }
     virtual bool isList() const { return false; }
+    virtual bool isTable() const { return false; }
     virtual bool isAccessibilityTable() const { return false; }
     virtual bool isDataTable() const { return false; }
     virtual bool isTableRow() const { return false; }
